--- a/Chrome.html
+++ b/Chrome.html
@@ -76,7 +76,7 @@
             </div>
         </a>
 
-        <a href="./Facebook/searchq_facebook-oq-fa-gs_lcrp-EgZjaHJvbWUqDwgAEEUYOxiDARixAxiABDIPCAAQRRg7GIMBGLEDGIAEMgYIARBFGDsyBggCEEUYOzIGCAMQRRhAMgYIBBBFGDwyBggFEEUYPDIGCAYQRRg8MgYIBxAFGEDSAQgxMDUzajBqN6gCALACAA-sourceid-chrome-ie-UTF-8.html">
+        <a href="./Facebook/facebook.html">
             <div class="shortcut" draggable="true">
                 <div class="thumb">
                     <img src="./Facebook/assets/fb-ico.ico" alt="">
@@ -85,7 +85,7 @@
             </div>
         </a>
         
-        <a href="./phone/phone.html">
+        <a href="./Phone/phone.html">
             <div class="shortcut" draggable="true">
                 <div class="thumb">
                     <img src="./Phone/assets/pics/iphone-x.png" alt="">
