--- a/Phone/phone.html
+++ b/Phone/phone.html
@@ -82,12 +82,12 @@
                 </div>
  
                 <div class="music-control">
-                    <div class="shuffle-song"><img src="./assets/white-icon/shuffle-svgrepo-com.svg" alt=""></div>
+                    <div class="shuffle-song"><img id="shuffle-song" src="./assets/white-icon/shuffle-svgrepo-com.svg" alt=""></div>
                     <!-- <div class="shuffle-song"><img src="./assets/color-icon/shuffle-colorful-svgrepo-com.svg" alt=""></div> -->
                     <div class="back-song"><img src="./assets/white-icon/backward-step-svgrepo-com.svg" alt=""></div>
                     <div class="play-song"><img src="./assets/white-icon/play-svgrepo-com.svg" alt=""></div>
                     <div class="next-song"><img src="./assets/white-icon/forward-step-svgrepo-com.svg" alt=""></div>
-                    <div class="repeat-song"><img src="./assets/white-icon/repeat-svgrepo-com.svg" alt=""></div>
+                    <div class="repeat-song"><img id="repeat-song" src="./assets/white-icon/repeat-svgrepo-com.svg" alt=""></div>
                      <!-- <div class="repeat-one-song"><img src="./assets/color-icon/repeat-one-svgrepo-com.svg" alt=""></div> -->
                     <!-- <div class="repeat-infinite-song"><img src="./assets/color-icon/repeat-infinite-svgrepo-com.svg" alt=""></div> -->
                 </div>
